fix: pet too small on big screen

--- a/frontend/src/app/pet/pet.page.scss
+++ b/frontend/src/app/pet/pet.page.scss
@@ -29,8 +29,8 @@ ion-icon {
   }
 }
 .pet {
-  max-width: 270px;
-  width: 72%;
+  max-width: 60vh;
+  width: 60%;
   margin: 0 auto;
 }
 .indicator {
